# mars

./: .codacy.yml  .codecov.yml  .coveragerc  .coveragerc-tensor  .coveragerc-threaded  .dockerignore  .flake8  .gitattributes  .gitignore  .python-version  .readthedocs.yml  .travis.yml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  LICENSE  MAINTAINERS.md  MANIFEST.in  README.rst  RELEASES.md  SUPPORT.md  appveyor.yml  azure-pipelines.yml  conda-spec.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements-vineyard.txt  requirements-wheel.txt  requirements.txt  setup.cfg  setup.py  test.py  versioneer.py
.github/: PULL_REQUEST_TEMPLATE.md  codecov-upstream.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: benchmark-ci.yml  build-wheels.sh  cancel-prev.yml  cd.yml  checks.yml  ci.yml  core-ci.yml  core-gpu-ci.yml  docker-cd.yml  download-etcd.sh  full-ci.yml  install-conda.sh  install-hadoop.sh  install-hdfs.sh  install-minikube.sh  os-compat-ci.yml  platform-ci.yml  pypi-cd.yml  reload-env.sh  remove_tracer_errors.py  run-tests.sh  unify_coverage.py  upload-packages.sh
asv_bench/: asv.conf.json
asv_bench/benchmarks/: empty_remotes.py  graph_assigner.py  graph_builder.py  serialize.py
asv_bench/benchmarks/learn/: model_selection.py
benchmarks/: README.md
benchmarks/asv_bench/: asv.conf.json
benchmarks/asv_bench/benchmarks/: execution.py  graph_assigner.py  graph_builder.py  import.py  serialize.py  storage.py  tokenize.py  util_tokenize.py
benchmarks/tpch/: gen_data.py  loader.py  run_queries.py
ci/: build-ext.sh  copycheck.py  importcheck.py  install-conda.sh  install-hadoop.sh  install-minikube.sh  modecheck.sh  reload-env.sh  remove_tracer_errors.py  requirements-wheel.txt  rewrite-cov-config.sh  run-tests.sh
docs/: Makefile  build.sh  doc-requirements.txt  make.bat  requirements-doc.txt
docs/source/: conf.py  contributing.rst  execution.rst  getting-started.rst  gpu.rst  index.rst  install.rst  kubernetes.rst  norm_zh.py
docs/source/_templates/: accessor.rst  accessor_attribute.rst  accessor_callable.rst  accessor_method.rst
docs/source/dataframe/: index.rst
docs/source/development/: api_coverage.rst  contributing.rst  index.rst  metrics.rst  operand.rst  overview.rst
docs/source/distributed/: architecture.rst  (+5 more)
mars/: __init__.py  _resource.pyx  _utils.pxd  _utils.pyx  _version.py  aio.py  api.py  appveyor.yml  base_app.py  cluster_info.py  compat.py  config.py  config.yml  conftest.py  context.py  context_.py  core.py  custom_log.py  distributor.py  errors.py  executor.py  filesystem.py  fuse.pyx  graph.pyx  graph_builder.py  kvstore.py  node_info.py  opcodes.py  operands.py  promise.py  resource.py  session.py  supervisor.py  tiles.py  typing.py  utils.py  utils_c.pyx  worker.py
mars/_core/: __init__.py
mars/actors/: __init__.py  cluster.pxd  cluster.pyx  core.pxd  core.pyx  distributor.pxd  distributor.pyx  errors.py
mars/compat/: __init__.py  numpy_compat.py
mars/core/: __init__.py  base.py  context.py  custom_log.py  entrypoints.py  mode.py  session.py  typing.py
mars/dataframe/: __init__.py  align.py  arrays.py  core.py  dataset.py  expression_utils.py  initializer.py  operands.py  utils.py
mars/deploy/: __init__.py  utils.py
mars/execution/: api.py
mars/learn/: __init__.py  _config.py  base.py  operands.py  wrappers.py
mars/lib/: asyncinit.py  bloom_filter.py  compression.py  enum.py  fury.pyx  gipc.pyx  groupby_wrapper.py  lib_utils.py  mkl_interface.py  nvutils.py  ordered_set.py  ordered_set.pyx  six.py  tbcode.py  version.py
mars/metric/: api.py
mars/metrics/: __init__.py  api.py
mars/operands/: __init__.py  arithmetic.py  base.py  core.py  datasource.py  datastore.py  fetch.py  fft.py  fuse.py  indexing.py  linalg.py  merge.py  random.py  reduction.py
mars/optimizes/: core.py  cp.py  jax.py  jx.py  ne.py  optimizer.py  utils.py
mars/oscar/: __init__.py  api.py  backend.py  batch.py  context.pxd  context.pyx  core.pxd  core.pyx  debug.py  driver.py  errors.py  messages.pxd  messages.pyx  profiling.py  utils.pxd  utils.pyx
mars/ray/: __init__.py  core.py
mars/remote/: __init__.py  core.py  operands.py  run_script.py  utils.py
mars/scheduler/: __init__.py  __main__.py  analyzer.py  api.py  assigner.py  chunkmeta.py  custom_log.py  distributor.py  graph.py  kvstore.py  mutable.py  node_info.py  operand.py  prochelper.py  resource.py  service.py  session.py  taskheap.pyx  utils.py
mars/serialization/: __init__.py  _fury.pyx  aio.py  arrow.py  core.pxd  core.py  core.pyi  core.pyx  cuda.py  exception.py  mars_objects.py  numpy.py  ray.py  scipy.py
mars/serialize/: __init__.py  core.pxd  core.pyx  dataserializer.py  jsonserializer.pyx  pbserializer.pyx
mars/services/: __init__.py  _core.pyx  context.py  core.py  ray_utils.py  utils.py
mars/storage/: __init__.py  base.py  core.py  cuda.py  errors.py  filesystem.py  plasma.py  ray.py  shared_memory.py  utils.py  vineyard.py
mars/storage_lib/: core.py
mars/tensor/: __init__.py  array_utils.py  core.py  execute_utils.py  operands.py  utils.py
mars/tests/: __init__.py  config_test.yml  conftest.py  core.py  test_aio.py  test_api.py  test_base_app.py  test_cluster.py  test_config.py  test_distributor.py  test_eager_mode.py  test_executor.py  test_filesystem.py  test_graph.py  test_kvstore.py  test_mutable.py  test_prefetch.py  test_promise.py  test_resource.py  test_session.py  test_utils.py
mars/web/: __init__.py  __main__.py  api.py  api_client.py  apihandlers.py  dashboard.py  scheduler_pages.py  server.py  session.py  task_pages.py  worker_pages.py
mars/worker/: __init__.py  __main__.py  api.py  calc.py  chunkholder.py  chunkstore.py  custom_log.py  daemon.py  dataio.py  dispatcher.py  distributor.py  events.py  execution.py  prochelper.py  quota.py  seal.py  service.py  spill.py  status.py  taskqueue.py  transfer.py  utils.py
misc/: pb-compile.sh
scripts/: mars-scheduler  mars-web  mars-worker
tests/: test_arrow.py
(+3474 files in other folders)
